| Bug #33406 | ndb_restore -e restores epoch with wrong (big) value from old backups | ||
|---|---|---|---|
| Submitted: | 20 Dec 2007 16:34 | Modified: | 7 Jan 2008 13:09 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: ClusterRep | Severity: | S3 (Non-critical) |
| Version: | CGE 6.2/3 | OS: | Any |
| Assigned to: | Tomas Ulin | Target Version: | |
[20 Dec 2007 16:34]
Tomas Ulin
[20 Dec 2007 17:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/40278 ChangeSet@1.2683, 2007-12-20 16:36:18+01:00, tomas@whalegate.ndb.mysql.com +4 -0 Bug #33406 ndb_restore -e restores epoch with wrong (big) value from old backups
[7 Jan 2008 13:09]
Jon Stephens
Documented in the 5.1.23-ndb-6.3.8 changelog as follows:
ndb_restore -e restored excessively large
values to the ndb_apply_status table's
epoch column when restoring to a MySQL
Cluster version supporting Micro-GCPs from an older version that
did not support these.
A workaround when restoring to MCCGE releases
supporting micro-GCPs previous to MySQL 5.1.23-ndb-6.3.8 is to
perform a 32-bit shift on the epoch column
values to reduce them to their proper size.
[2 Feb 2008 12:53]
Jon Stephens
Also documented for 5.1.23-ndb-6.2.11.
[20 Feb 2008 17:03]
Bugs System
Pushed into 6.0.5-alpha
