Bug #33406  	ndb_restore -e restores epoch with wrong (big) value from old backups